First commited as before_53455_rev3